[IMP] web_editor: fix images and icons animations on mobile
Due to the 'transform: none' applied on images and icons on mobile, some
animations do not work in mobile. This commit makes an exception to this
rule for animated images/icons.

task-2984828

X-original-commit: 78098b3db96e796ae6a09bd0f4bec1eb0c384d28

--- a/addons/web_editor/static/src/scss/web_editor.frontend.scss
+++ b/addons/web_editor/static/src/scss/web_editor.frontend.scss
@@ -1,6 +1,8 @@
 @include media-breakpoint-down(md) {
     img, .media_iframe_video, span.fa, i.fa {
-        transform: none !important;
+        &:not(.o_animate) {
+            transform: none !important;
+        }
     }
 }
 
